# FFmpegNDK

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zhidao/ffmpegndkdemo/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/zhidao/informcollect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/zhidao/ffmpegndkdemo/: MainActivity.java
app/src/main/java/com/zhidao/informcollect/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zhidao/ffmpegndkdemo/: ExampleUnitTest.java
app/src/test/java/com/zhidao/informcollect/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
